# Ogmen_Robotics

./: README.md
bot_control/: CMakeLists.txt  package.xml  readme
bot_control/src/: reading_laser.py
bot_description/: CMakeLists.txt  README.md  package.xml
bot_description/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
bot_description/launch/: rviz.launch.py  spawn.launch.py
bot_description/worlds/: mynew.world  myworld.world
